<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/msgContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView

                android:maxEms="3"
                android:singleLine="true"
                android:ellipsize="end"

                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="#333333"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pic"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toLeftOf="@id/author"
                android:id="@+id/authorTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textColor="#555555"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/desc"
                app:layout_constraintStart_toEndOf="@id/pic" />

            <TextView
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unvisible"
                android:textColor="#555555"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/authorTag"
                app:layout_constraintTop_toBottomOf="@id/desc" />

            <TextView
                android:id="@+id/uploadTimeTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadTime"
                android:textColor="#555555"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/pic"
                app:layout_constraintTop_toBottomOf="@id/author"
                app:layout_constraintRight_toRightOf="@id/uploadTime"
                />


            <TextView
                android:layout_marginStart="8dp"
                android:id="@+id/uploadTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadTimeId"
                android:textColor="#888888"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author"
                app:layout_constraintStart_toEndOf="@id/uploadTimeTag"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/pic"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:importantForAccessibility="no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/githubTag"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/uploadTimeTag"
                app:layout_constraintStart_toEndOf="@id/pic"
                android:textColor="#888888"
                android:textSize="14sp"
                android:text="@string/github"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/github"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/uploadTime"
                app:layout_constraintStart_toEndOf="@id/githubTag"
                android:textColor="#888888"
                android:textSize="14sp"
                android:text="@string/githubId"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
