<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.delta.playandroid.viewmodel.LoginViewModel" />
    </data>
    <FrameLayout
        android:id="@+id/loginPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_marginBottom="20sp"
                app:layout_constraintBottom_toTopOf="@id/login_tag"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp">

                <ImageButton
                    android:id="@+id/autoLogin_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fast_login"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" >
                </ImageButton>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/login_tag"
                app:layout_constraintBottom_toTopOf="@id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoginTag"
                android:textSize="32sp"
                android:textAlignment="center">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:text="@={loginViewModel.usnInput}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.pwdInput}"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/usernameLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:maxLength="@integer/material_motion_duration_medium_1"
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/passwordLayout"
                    android:text="@string/LogIn"
                    android:onClick="@{()->loginViewModel.login()}"
                    android:textSize="24sp">
                </Button>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_marginStart="20dp"
                android:id="@+id/jump"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JumpToRegisterTag"
                app:layout_constraintBottom_toTopOf="@id/freeMode"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_marginStart="20dp"
                android:id="@+id/freeMode"
                android:layout_marginBottom="80dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FreeMode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <CheckBox
                android:id="@+id/rememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:checked="@={loginViewModel.rememberPassword}"
                android:minHeight="48dp"
                android:text="@string/RememberPassword"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <CheckBox
                android:id="@+id/AutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:checked="@={loginViewModel.autoLogin}"
                android:minHeight="48dp"
                android:text="@string/AutoLogin"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rememberPassword"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>