<!-- res/layout/dialog_input.xml -->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="article"
            type="com.delta.playandroid.data.model.bean.entity.Article" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="false"
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_input_title"
                android:inputType="textMultiLine"
                android:text="@={article.title}"
                tools:ignore="TouchTargetSizeCheck">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="false"
                android:id="@+id/link_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_input_link"
                android:inputType="textMultiLine"
                android:text="@={article.link}"
                tools:ignore="TouchTargetSizeCheck">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/author_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/link_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="false"
                android:id="@+id/author_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_input_author"
                android:inputType="textMultiLine"
                android:text="@={article.author}"
                tools:ignore="TouchTargetSizeCheck">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
